log
Fri 10 Mar 2023 12:06:53 PM UTC: 
 tests:  0|7
total_score: 0/70
414262f
Fri 10 Mar 2023 12:08:01 PM UTC: 
 exercises.c | 3 +++
 1 file changed, 3 insertions(+)
In file included from test.c:5:
exercises.c: In function ‘swap’:
exercises.c:17:7: error: unused variable ‘aa’ [-Werror=unused-variable]
   17 |   int aa= *b;
      |       ^~
exercises.c:16:7: error: unused variable ‘bb’ [-Werror=unused-variable]
   16 |   int bb= *a;
      |       ^~
cc1: all warnings being treated as errors
Compilation failed
864e5e1
Fri 10 Mar 2023 12:10:57 PM UTC: 
 exercises.c | 5 +++--
 1 file changed, 3 insertions(+), 2 deletions(-)
 tests:  1|6
total_score: 10/70
c01c724
Fri 10 Mar 2023 09:16:13 PM UTC: 
 exercises.c | 5 +++++
 1 file changed, 5 insertions(+)
In file included from test.c:5:
exercises.c: In function ‘cmp’:
exercises.c:32:1: error: expected identifier or ‘(’ before ‘}’ token
   32 | }
      | ^
exercises.c: In function ‘arrayMaxMin’:
exercises.c:34:3: error: too few arguments to function ‘qsort’
   34 |   qsort()
      |   ^~~~~
In file included from test.c:2:
/nix/store/4pqv2mwdn88h7xvsm7a5zplrd8sxzvw0-glibc-2.35-163-dev/include/stdlib.h:838:13: note: declared here
  838 | extern void qsort (void *__base, size_t __nmemb, size_t __size,
      |             ^~~~~
In file included from test.c:5:
exercises.c:34:10: error: expected ‘;’ before ‘}’ token
   34 |   qsort()
      |          ^
      |          ;
   35 | 
   36 | }
      | ~         
test.c: In function ‘cmp’:
test.c:251:5: error: ‘main’ is normally a non-static function [-Werror=main]
  251 | int main( int argc, char *argv[] ) {
      |     ^~~~
test.c:271:1: error: expected declaration or statement at end of input
  271 | }
      | ^
test.c:272: error: control reaches end of non-void function [-Werror=return-type]
At top level:
test.c:251:5: error: ‘main’ defined but not used [-Werror=unused-function]
  251 | int main( int argc, char *argv[] ) {
      |     ^~~~
cc1: all warnings being treated as errors
Compilation failed
dec78da
Fri 10 Mar 2023 09:16:23 PM UTC: 
 exercises.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:5:
exercises.c: In function ‘cmp’:
exercises.c:32:1: error: expected identifier or ‘(’ before ‘}’ token
   32 | }
      | ^
test.c:251:5: error: ‘main’ is normally a non-static function [-Werror=main]
  251 | int main( int argc, char *argv[] ) {
      |     ^~~~
test.c:271:1: error: expected declaration or statement at end of input
  271 | }
      | ^
test.c:272: error: control reaches end of non-void function [-Werror=return-type]
At top level:
test.c:251:5: error: ‘main’ defined but not used [-Werror=unused-function]
  251 | int main( int argc, char *argv[] ) {
      |     ^~~~
cc1: all warnings being treated as errors
Compilation failed
4d9689d
Fri 10 Mar 2023 09:16:51 PM UTC: 
 exercises.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:5:
exercises.c: In function ‘cmp’:
exercises.c:32:1: error: control reaches end of non-void function [-Werror=return-type]
   32 | }
      | ^
cc1: all warnings being treated as errors
Compilation failed
9320d8d
Fri 10 Mar 2023 09:17:05 PM UTC: 
 exercises.c | 4 ++--
 1 file changed, 2 insertions(+), 2 deletions(-)
 tests:  1|6
total_score: 10/70
5516136
Wed 15 Mar 2023 03:23:44 PM UTC: 
 exercises.c | 14 ++++++++++----
 1 file changed, 10 insertions(+), 4 deletions(-)
In file included from test.c:5:
exercises.c: In function ‘cmp’:
exercises.c:31:8: error: ‘ptrpivote’ redeclared as different kind of symbol
   31 |   int *ptrpivote = (int *)pivote;
      |        ^~~~~~~~~
exercises.c:30:21: note: previous definition of ‘ptrpivote’ with type ‘const void *’
   30 | int cmp(const void *ptrpivote, const void *ptritem){
      |         ~~~~~~~~~~~~^~~~~~~~~
exercises.c:31:27: error: ‘pivote’ undeclared (first use in this function); did you mean ‘ptrpivote’?
   31 |   int *ptrpivote = (int *)pivote;
      |                           ^~~~~~
      |                           ptrpivote
exercises.c:31:27: note: each undeclared identifier is reported only once for each function it appears in
exercises.c:32:8: error: ‘ptritem’ redeclared as different kind of symbol
   32 |   int *ptritem = (int *)item;
      |        ^~~~~~~
exercises.c:30:44: note: previous definition of ‘ptritem’ with type ‘const void *’
   30 | int cmp(const void *ptrpivote, const void *ptritem){
      |                                ~~~~~~~~~~~~^~~~~~~
exercises.c:32:25: error: ‘item’ undeclared (first use in this function)
   32 |   int *ptritem = (int *)item;
      |                         ^~~~
exercises.c: In function ‘arrayMaxMin’:
exercises.c:42:1: error: expected expression before ‘}’ token
   42 | }
      | ^
Compilation failed
604e844
Wed 15 Mar 2023 03:24:20 PM UTC: 
 exercises.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:5:
exercises.c: In function ‘arrayMaxMin’:
exercises.c:42:1: error: expected expression before ‘}’ token
   42 | }
      | ^
Compilation failed
9b3a408
Wed 15 Mar 2023 03:24:31 PM UTC: 
 exercises.c | 1 -
 1 file changed, 1 deletion(-)
In file included from test.c:5:
exercises.c: In function ‘arrayMaxMin’:
exercises.c:40:17: error: expected ‘;’ before ‘}’ token
   40 |   *max =a[n - 1]
      |                 ^
      |                 ;
   41 | }
      | ~                
Compilation failed
780da47
Wed 15 Mar 2023 03:24:38 PM UTC: 
 exercises.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  2|5
total_score: 20/70
b9b932b
Thu 16 Mar 2023 02:32:12 PM UTC: 
 exercises.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:5:
exercises.c: In function ‘asignarValor’:
exercises.c:89:7: error: ‘vector’ undeclared (first use in this function); did you mean ‘Vector’?
   89 |   i = vector[0];
      |       ^~~~~~
      |       Vector
exercises.c:89:7: note: each undeclared identifier is reported only once for each function it appears in
Compilation failed
691c951
